--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,13 +10,16 @@
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
-    <string name="title_activity_nav" translatable="false">NavActivity</string>
+    <string name="title_activity_nav" translatable="false">KajurApps</string>
     <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
     <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
     <string name="nav_header_title" translatable="false">Kajur Apps</string>
     <string name="nav_header_subtitle" translatable="false">Sistem Kajur</string>
     <string name="nav_header_desc" translatable="false">Seperti Kajur</string>
     <string name="action_settings">Settings</string>
+
+    <string name="action_english" translatable="false">English</string>
+    <string name="action_indonesia" translatable="false">Indonesia</string>
 
     <string name="menu_profile">Profile</string>
     <string name="menu_menu">Menu</string>
